# LionClient

./: .gitignore  README.md  REFACTORING_SUMMARY.md  biome.json  original_app.txt  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts  归档碑文.md
docs/: cleanup-summary.md  features.md  optimization-summary.md  project-vision.md  refactoring-plan.md  tools-complete.md  tools-implementation.md  tools-roadmap.md  tools-summary.md  vision.md  window-controls-fix.md
scripts/: free-port.js
src/: App.tsx  globals.css  tauri-api.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  llm.rs  mod.rs  network.rs  shell.rs
src-tauri/src/commands/llm/: agent.rs  approval.rs  executor.rs  prompts.rs  runtime.rs  tools.rs
src-tauri/src/types/: chat.rs  files.rs  mod.rs  shell.rs
src/components/: ApprovalBanner.tsx  ChatFooter.tsx  ChatHeader.tsx  InstantToolPanel.tsx  RightPanel.tsx  Sidebar.tsx  ToolTracePanel.tsx  WindowControls.tsx  index.ts
src/components/Chat/: ChatContainer.tsx  ChatContainerOriginal.tsx  ChatInput.tsx  ChatInputStandalone.tsx  ChatMessage.tsx  MessageBubble.tsx  MessageList.tsx  (+2 more)
src/constants/: index.ts
src/hooks/: index.ts  useAutoScroll.ts  useFileList.ts  useLLMChat.ts  useLLMStream.ts  useWindowControls.ts
src/services/: index.ts  llm.ts  toolExecutor.ts  tools.ts
src/types/: chat.ts  index.ts  tools.ts
src/utils/: cn.ts  format.ts  index.ts  llmHelpers.ts  messageHelpers.ts  toolCallHandler.ts  toolParser.ts
