[package]
name = "lion"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# 更多键值及其定义请参考：https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# `_lib` 后缀看起来多余，但它是必要的
# 用于使库名称唯一，避免与二进制文件名称冲突
# 这似乎只是 Windows 上的问题，详见：https://github.com/rust-lang/cargo/issues/8519
name = "lion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
walkdir = "2.5"
trash = "5.0"
scraper = "0.20"
regex = "1.11"
percent-encoding = "2.3"

